editing style of physical page
재활치료 페이지 스타일 편집

--- a/c1/sub2.css
+++ b/c1/sub2.css
@@ -1,6 +1,6 @@
-/* sub1.css - intro.html을 위한 스타일 */
+/* sub2.css - physical.html을 위한 스타일 */
 @charset "utf-8";
-#content { #background: #f1f1f1;}
+#content { background: #f1f1f1;}
 .page { background:#f1f1f1; padding-top: 142px; margin-top: -142px; }
 .btn1 { width: 398px; }
 .btn1.item2 { left:calc(calc(100% - 1200px) / 2 + 400px);}
